--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,10 +1,10 @@
-# test:
-#   service: Disk
-#   root: <%= Rails.root.join("tmp/storage") %>
+test:
+  service: cloudinary
+  root: <%= Rails.root.join("tmp/storage") %>
 
-# local:
-#   service: Disk
-#   root: <%= Rails.root.join("storage") %>
+local:
+  service: Disk
+  root: <%= Rails.root.join("storage") %>
 
 cloudinary:
   service: cloudinary
