--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,6 +1,6 @@
 test:
-  service: cloudinary
-  root: <%= Rails.root.join("tmp/storage") %>
+  service: Disk
+  root: <%= Rails.root.join("storage") %>
 
 local:
   service: Disk
